--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
@@ -27,8 +27,11 @@
   "dependencies": {
     "axios": "^1.7.5",
     "firebase": "^10.12.5",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.427.0",
     "openai": "^4.56.0",
-    "react-router-dom": "^6.26.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.0",
+    "react-tooltip": "^5.28.0"
   }
 }
