--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "openai": "^4.56.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
-    "react-tooltip": "^5.28.0"
+    "react-tooltip": "^5.28.0",
+    "recharts": "^2.12.7"
   }
 }
